--- a/historia.html
+++ b/historia.html
@@ -19,24 +19,29 @@
         </nav>
     </header>
     <main>
-        <div class="contenido">
-            <div class="recuadro">
-                <div class="enunciado">
-                    <h2>Saborea la tradición boliviana en cada bocado de nuestras deliciosas salteñas.</h2>
+        <div class="imagenprincipal">
+            <div class="textoimagen">
+                <h1>Nuestra historia tiene nombre propio</h1>
+            </div>
+        </div>
+        <div class="card-contenedor">
+            <div class="card">
+                <img src="Imagenes/h.jpg" alt="Salteña1">
+                <div class="card-body">
+                    <p class="card-text">La Salteñeria fue fundada en 1950 por Dona Maria, una mujer apasionada por la cocina boliviana. Desde entonces, hemos estado sirviendo las mejores salteñas en Bolivia, hechas con amor y dedicación. Nuestra receta ha sido pasada de generación en generación, manteniendo la tradición viva.</p>
                 </div>
-                <div class="texto-adicional">
-                    <p>Descubre un mundo de sabores.</p>
-                </div>
-                <div class="imagenes">
-                    <img src="Imagenes/s1.jpg" alt="Imagen 1" class="imagen">
-                    <img src="Imagenes/s2.jpg" alt="Imagen 2" class="imagen">
-                    <img src="Imagenes/s3.jpg" alt="Imagen 3" class="imagen"> 
+            </div>
+            <div class="card">
+                <img src="Imagenes/h2.jpg" alt="Salteña2">
+                <div class="card-body">
+                    <p class="card-text">La idea de la Salteñeria comenzó con un sueño de compartir la deliciosa comida boliviana con el mundo. Con una receta familiar y un amor por la cocina, Dona Maria abrió la primera Salteñeria en Sucre. Desde entonces, hemos crecido, pero siempre nos hemos mantenido fieles a nuestras raíces.</p>
                 </div>
             </div>
         </div>
-        <div class="fuera-del-recuadro">
-            <p class="boca-a-boca">Boca a boca</p>
-            <p class="parrafo-nuestros-clientes">Nuestros clientes no necesitan palabras para expresar su aprobación. Cada bocado es una explosión de sabor que habla por sí mismo, y al finalizar, la sonrisa en sus rostros y la satisfacción en sus miradas son elocuentes.</p>
+        <hr class="separador">
+        <div class="textofrases">
+            <p>"Las mejores salteñas de Bolivia"</p>
+            <p>"Una tradición que perdura"</p>
         </div>
     </main>
     <footer>
