--- a/menu.html
+++ b/menu.html
@@ -18,27 +18,37 @@
             </ul>
         </nav>
     </header>
+    
     <main>
-        <div class="contenido">
-            <div class="recuadro">
-                <div class="enunciado">
-                    <h2>Saborea la tradición boliviana en cada bocado de nuestras deliciosas salteñas.</h2>
-                </div>
-                <div class="texto-adicional">
-                    <p>Descubre un mundo de sabores.</p>
-                </div>
-                <div class="imagenes">
-                    <img src="Imagenes/s1.jpg" alt="Imagen 1" class="imagen">
-                    <img src="Imagenes/s2.jpg" alt="Imagen 2" class="imagen">
-                    <img src="Imagenes/s3.jpg" alt="Imagen 3" class="imagen"> 
-                </div>
+        <script src="apilar.js" defer></script>
+        <div class="container">
+            <div class="square" id="square1">
+                <h2>Salteñas</h2>
+                <ul>
+                    <li>Salteña de pollo</li>
+                    <li>Salteña de carne</li>
+                    <li>Salteña mixta</li>
+                </ul>
+            </div>
+            <div class="square" id="square2">
+                <h2>Bebidas</h2>
+                <ul>
+                    <li>Refresco</li>
+                    <li>Jugo natural</li>
+                    <li>Cerveza</li>
+                </ul>
+            </div>
+            <div class="square" id="square3">
+                <h2>Combos</h2>
+                <ul>
+                    <li>Combo Salteña + Refresco</li>
+                    <li>Combo Salteña + Jugo natural</li>
+                    <li>Combo Salteña + Cerveza</li>
+                </ul>
             </div>
         </div>
-        <div class="fuera-del-recuadro">
-            <p class="boca-a-boca">Boca a boca</p>
-            <p class="parrafo-nuestros-clientes">Nuestros clientes no necesitan palabras para expresar su aprobación. Cada bocado es una explosión de sabor que habla por sí mismo, y al finalizar, la sonrisa en sus rostros y la satisfacción en sus miradas son elocuentes.</p>
-        </div>
     </main>
+    
     <footer>
         <div class="footer-container">
             <div class="footer-info">
