--- a/contactos.html
+++ b/contactos.html
@@ -18,27 +18,56 @@
             </ul>
         </nav>
     </header>
+    
     <main>
-        <div class="contenido">
-            <div class="recuadro">
-                <div class="enunciado">
-                    <h2>Saborea la tradición boliviana en cada bocado de nuestras deliciosas salteñas.</h2>
-                </div>
-                <div class="texto-adicional">
-                    <p>Descubre un mundo de sabores.</p>
-                </div>
-                <div class="imagenes">
-                    <img src="Imagenes/s1.jpg" alt="Imagen 1" class="imagen">
-                    <img src="Imagenes/s2.jpg" alt="Imagen 2" class="imagen">
-                    <img src="Imagenes/s3.jpg" alt="Imagen 3" class="imagen"> 
-                </div>
+        <script src="contactos.js" defer></script>
+        <div class="container2">
+            <div class="contacto" id="contacto1">
+                <h2>Horario</h2>
+                <ul>
+                    <li>Lunes a Viernes: 9:00 am - 6:00 pm</li>
+                    <li>Sabado y Domingo: Cerrado</li>
+                </ul>
+            </div>
+            <div class="contacto" id="contacto2">
+                <h2>Informacion</h2>
+                <ul>
+                    <li>Telefono: +591 62452470</li>
+                    <li>Calle: Bolivia N°123</li>
+                    <li>Correo: infoempanadasgmail.com</li>
+                </ul>
             </div>
         </div>
-        <div class="fuera-del-recuadro">
-            <p class="boca-a-boca">Boca a boca</p>
-            <p class="parrafo-nuestros-clientes">Nuestros clientes no necesitan palabras para expresar su aprobación. Cada bocado es una explosión de sabor que habla por sí mismo, y al finalizar, la sonrisa en sus rostros y la satisfacción en sus miradas son elocuentes.</p>
+        <div class="reseñas-container">
+            <div class="reseña">
+                <h3>Juan López</h3>
+                <p><em>"Las mejores salteñas que he probado en mi vida. ¡Definitivamente volveré!"</em></p>
+            </div>
+            <div class="reseña">
+                <h3>María Teresa</h3>
+                <p><em>"Un servicio excelente y la calidad de los productos es inmejorable."</em></p>
+            </div>
+            <div class="reseña">
+                <h3>Carlos Sánchez</h3>
+                <p><em>"Ambiente acogedor y comida deliciosa. Muy recomendable."</em></p>
+            </div>
         </div>
+        <div class="reseñas-container2">
+            <div class="reseña2">
+                <h3>Ana García</h3>
+                <p><em>"Increíble sabor y presentación. ¡Mis hijos también quedaron encantados!"</em></p>
+            </div>
+            <div class="reseña2">
+                <h3>Jorge Martínez</h3>
+                <p><em>"El lugar perfecto para disfrutar con amigos y familiares. Excelente atención."</em></p>
+            </div>
+            <div class="reseña2">
+                <h3>Lucía Fernández</h3>
+                <p><em>"Cada visita es una experiencia única. Las salteñas son insuperables."</em></p>
+            </div>
+        </div>    
     </main>
+    
     <footer>
         <div class="footer-container">
             <div class="footer-info">
