--- a/historia.html
+++ b/historia.html
@@ -13,7 +13,7 @@
                 <li class="nav-item"><a href="historia.html" class="nav-link">Nuestra historia</a></li>
                 <li class="nav-item"><a href="noticias" class="nav-link">Noticias</a></li>
                 <li class="nav-item"><a href="menu.html" class="nav-link">Menú</a></li>
-                <li class="nav-item"><a href="contacto" class="nav-link">Contacto</a></li>
+                <li class="nav-item"><a href="contactos.html" class="nav-link">Contacto</a></li>
                 <li class="nav-item"><a href="inicio.html" class="nav-link">Inicio</a></li>
             </ul>
         </nav>
@@ -54,9 +54,9 @@
             <div class="footer-links">
                 <h3>Información</h3>
                 <ul>
-                    <li><a href="#">Menú</a></li>
-                    <li><a href="#">Promociones</a></li>
-                    <li><a href="#">Contacto</a></li>
+                    <li><a href="menu.html">Menú</a></li>
+                    <li><a href="historia.html">Historia</a></li>
+                    <li><a href="contactos.html">Contacto</a></li>
                 </ul>
             </div>
             <div class="footer-social">
