--- a/historia.html
+++ b/historia.html
@@ -10,7 +10,7 @@
     <header>
         <nav class="navbar">
             <ul class="navbar-nav">
-                <li class="nav-item"><a href="historia.html" class="nav-link">Nuestra historia</a></li>
+                <li class="nav-item"><a href="historia.html" class="nav-link">Prueba</a></li>
                 <li class="nav-item"><a href="noticias" class="nav-link">Noticias</a></li>
                 <li class="nav-item"><a href="menu.html" class="nav-link">Menú</a></li>
                 <li class="nav-item"><a href="contactos.html" class="nav-link">Contacto</a></li>
