--- a/menu.html
+++ b/menu.html
@@ -75,73 +75,73 @@
     <div class="container-fluid pt-5">
         <div class="container">
             <div class="section-title">
-                <h4 class="text-primary text-uppercase" style="letter-spacing: 5px;">Menu & Pricing</h4>
-                <h1 class="display-4">Competitive Pricing</h1>
+                <h4 class="text-primary text-uppercase" style="letter-spacing: 5px;">Menu & Precios</h4>
+                <h1 class="display-4">La Mejor Calidad y Sabor</h1>
             </div>
             <div class="row">
                 <div class="col-lg-6">
-                    <h1 class="mb-5">Hot Coffee</h1>
+                    <h1 class="mb-5">Salteñas</h1>
                     <div class="row align-items-center mb-5">
                         <div class="col-4 col-sm-3">
                             <img class="w-100 rounded-circle mb-3 mb-sm-0" src="img/menu-1.jpg" alt="">
-                            <h5 class="menu-price">$5</h5>
+                            <h5 class="menu-price">5Bs</h5>
                         </div>
                         <div class="col-8 col-sm-9">
-                            <h4>Black Coffee</h4>
-                            <p class="m-0">Sit lorem ipsum et diam elitr est dolor sed duo guberg sea et et lorem dolor</p>
+                            <h4>Salteña de Carne</h4>
+                            <p class="m-0">Masa horneada rellena de carne de res, papas, guisantes y especias tradicionales.</p>
                         </div>
                     </div>
                     <div class="row align-items-center mb-5">
                         <div class="col-4 col-sm-3">
                             <img class="w-100 rounded-circle mb-3 mb-sm-0" src="img/menu-2.jpg" alt="">
-                            <h5 class="menu-price">$7</h5>
+                            <h5 class="menu-price">5Bs</h5>
                         </div>
                         <div class="col-8 col-sm-9">
-                            <h4>Chocolete Coffee</h4>
-                            <p class="m-0">Sit lorem ipsum et diam elitr est dolor sed duo guberg sea et et lorem dolor</p>
+                            <h4>Salteña de Pollo</h4>
+                            <p class="m-0">Masa horneada rellena de pollo, papas, verdura y especias tradicionales.</p>
                         </div>
                     </div>
-                    <div class="row align-items-center mb-5">
+                    <div class="row align-items-center x-5">
                         <div class="col-4 col-sm-3">
                             <img class="w-100 rounded-circle mb-3 mb-sm-0" src="img/menu-3.jpg" alt="">
-                            <h5 class="menu-price">$9</h5>
+                            <h5 class="menu-price">7Bs</h5>
                         </div>
                         <div class="col-8 col-sm-9">
-                            <h4>Coffee With Milk</h4>
-                            <p class="m-0">Sit lorem ipsum et diam elitr est dolor sed duo guberg sea et et lorem dolor</p>
+                            <h4>Salteña Santa Clara</h4>
+                            <p class="m-0">Masa horneada rellena de un delicioso caldo de pollo, papas, y hierbas frescas.</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-6">
-                    <h1 class="mb-5">Cold Coffee</h1>
+                    <h1 class="mb-5">Gaseosas</h1>
                     <div class="row align-items-center mb-5">
                         <div class="col-4 col-sm-3">
                             <img class="w-100 rounded-circle mb-3 mb-sm-0" src="img/menu-1.jpg" alt="">
-                            <h5 class="menu-price">$5</h5>
+                            <h5 class="menu-price">2Bs</h5>
                         </div>
                         <div class="col-8 col-sm-9">
-                            <h4>Black Coffee</h4>
-                            <p class="m-0">Sit lorem ipsum et diam elitr est dolor sed duo guberg sea et et lorem dolor</p>
+                            <h4>Personal</h4>
+                            <p class="m-0">Bebida refrescante en presentación individual para disfrutar en cualquier momento.</p>
                         </div>
                     </div>
                     <div class="row align-items-center mb-5">
                         <div class="col-4 col-sm-3">
                             <img class="w-100 rounded-circle mb-3 mb-sm-0" src="img/menu-2.jpg" alt="">
-                            <h5 class="menu-price">$7</h5>
+                            <h5 class="menu-price">8Bs</h5>
                         </div>
                         <div class="col-8 col-sm-9">
-                            <h4>Chocolete Coffee</h4>
-                            <p class="m-0">Sit lorem ipsum et diam elitr est dolor sed duo guberg sea et et lorem dolor</p>
+                            <h4>De 1 litro</h4>
+                            <p class="m-0">Perfecta para compartir, esta presentación de un litro es ideal para acompañar tus comidas.</p>
                         </div>
                     </div>
                     <div class="row align-items-center mb-5">
                         <div class="col-4 col-sm-3">
                             <img class="w-100 rounded-circle mb-3 mb-sm-0" src="img/menu-3.jpg" alt="">
-                            <h5 class="menu-price">$9</h5>
+                            <h5 class="menu-price">13Bs</h5>
                         </div>
                         <div class="col-8 col-sm-9">
-                            <h4>Coffee With Milk</h4>
-                            <p class="m-0">Sit lorem ipsum et diam elitr est dolor sed duo guberg sea et et lorem dolor</p>
+                            <h4>De 2 Litros</h4>
+                            <p class="m-0">La opción más grande para disfrutar en familia o con amigos, manteniendo el sabor fresco y burbujeante.</p>
                         </div>
                     </div>
                 </div>
