--- a/2-testimonial.html
+++ b/2-testimonial.html
@@ -1,8 +1,8 @@
 <div class="container-fluid pt-5">
     <div class="container">
         <div class="section-title">
-            <h4 class="text-primary text-uppercase" style="letter-spacing: 5px;">Our Services</h4>
-            <h1 class="display-4">Fresh & Organic Beans</h1>
+            <h4 class="text-primary text-uppercase" style="letter-spacing: 5px;">Nuestros Servicios</h4>
+            <h1 class="display-4">Frescura y Calidad</h1>
         </div>
         <div class="row">
             <div class="col-lg-6 mb-5">
@@ -11,9 +11,8 @@
                         <img class="img-fluid mb-3 mb-sm-0" src="img/service-1.jpg" alt="">
                     </div>
                     <div class="col-sm-7">
-                        <h4><i class="fa fa-truck service-icon"></i>Fastest Door Delivery</h4>
-                        <p class="m-0">Sit lorem ipsum et diam elitr est dolor sed duo. Guberg sea et et lorem dolor sed est sit
-                            invidunt, dolore tempor diam ipsum takima erat tempor</p>
+                        <h4><i class="fa fa-truck service-icon"></i>Entrega Rapida</h4>
+                        <p class="m-0">En Salteñería Mary, te llevamos lo mejor en cada bocado. ¡Prueba nuestras deliciosas salteñas!</p>
                     </div>
                 </div>
             </div>
@@ -23,9 +22,8 @@
                         <img class="img-fluid mb-3 mb-sm-0" src="img/service-2.jpg" alt="">
                     </div>
                     <div class="col-sm-7">
-                        <h4><i class="fa fa-coffee service-icon"></i>Fresh Coffee Beans</h4>
-                        <p class="m-0">Sit lorem ipsum et diam elitr est dolor sed duo. Guberg sea et et lorem dolor sed est sit
-                            invidunt, dolore tempor diam ipsum takima erat tempor</p>
+                        <h4><i class="fa fa-coffee service-icon"></i>Salteñas de Calidad</h4>
+                        <p class="m-0">Elaboradas con ingredientes frescos y auténticos, cada salteña es un festín para tus sentidos.</p>
                     </div>
                 </div>
             </div>
@@ -35,9 +33,8 @@
                         <img class="img-fluid mb-3 mb-sm-0" src="img/service-3.jpg" alt="">
                     </div>
                     <div class="col-sm-7">
-                        <h4><i class="fa fa-award service-icon"></i>Best Quality Coffee</h4>
-                        <p class="m-0">Sit lorem ipsum et diam elitr est dolor sed duo. Guberg sea et et lorem dolor sed est sit
-                            invidunt, dolore tempor diam ipsum takima erat tempor</p>
+                        <h4><i class="fa fa-award service-icon"></i>Calidad Insuperable</h4>
+                        <p class="m-0">Nos esforzamos por ofrecerte lo mejor en cada salteña que servimos. ¡Te garantizamos una experiencia gastronómica excepcional!</p>
                     </div>
                 </div>
             </div>
@@ -47,9 +44,8 @@
                         <img class="img-fluid mb-3 mb-sm-0" src="img/service-4.jpg" alt="">
                     </div>
                     <div class="col-sm-7">
-                        <h4><i class="fa fa-table service-icon"></i>Online Table Booking</h4>
-                        <p class="m-0">Sit lorem ipsum et diam elitr est dolor sed duo. Guberg sea et et lorem dolor sed est sit
-                            invidunt, dolore tempor diam ipsum takima erat tempor</p>
+                        <h4><i class="fa fa-table service-icon"></i>Haz tu Pedido Ahora</h4>
+                        <p class="m-0">¡Ordénalas ahora y disfruta de la verdadera esencia de la gastronomía boliviana en la comodidad de tu hogar!</p>
                     </div>
                 </div>
             </div>
