--- a/2-testimonial.html
+++ b/2-testimonial.html
@@ -19,10 +19,10 @@
             <div class="col-lg-6 mb-5">
                 <div class="row align-items-center">
                     <div class="col-sm-5">
-                        <img class="img-fluid mb-3 mb-sm-0" src="img/service-2.jpg" alt="">
+                        <img class="img-fluid mb-3 mb-sm-0" src="img/servicio_2.jpg" alt="">
                     </div>
                     <div class="col-sm-7">
-                        <h4><i class="fa fa-coffee service-icon"></i>Salteñas de Calidad</h4>
+                        <h4><i class="fa fa-award service-icon"></i>Salteñas de Calidad</h4>
                         <p class="m-0">Elaboradas con ingredientes frescos y auténticos, cada salteña es un festín para tus sentidos.</p>
                     </div>
                 </div>
@@ -30,18 +30,18 @@
             <div class="col-lg-6 mb-5">
                 <div class="row align-items-center">
                     <div class="col-sm-5">
-                        <img class="img-fluid mb-3 mb-sm-0" src="img/service-3.jpg" alt="">
+                        <img class="img-fluid mb-3 mb-sm-0" src="img/servicio-3.jpeg" alt="">
                     </div>
                     <div class="col-sm-7">
-                        <h4><i class="fa fa-award service-icon"></i>Calidad Insuperable</h4>
-                        <p class="m-0">Nos esforzamos por ofrecerte lo mejor en cada salteña que servimos. ¡Te garantizamos una experiencia gastronómica excepcional!</p>
+                        <h4><i class="fa fa-award service-icon"></i>Aventura Unica</h4>
+                        <p class="m-0">Aseguramos una experiencia gastronómica excepcional. ¡Nuestro compromiso es ofrecerte lo mejor en cada bocado!</p>
                     </div>
                 </div>
             </div>
             <div class="col-lg-6 mb-5">
                 <div class="row align-items-center">
                     <div class="col-sm-5">
-                        <img class="img-fluid mb-3 mb-sm-0" src="img/service-4.jpg" alt="">
+                        <img class="img-fluid mb-3 mb-sm-0" src="img/servicio-4.jpg" alt="">
                     </div>
                     <div class="col-sm-7">
                         <h4><i class="fa fa-table service-icon"></i>Haz tu Pedido Ahora</h4>
