--- a/1-nav.html
+++ b/1-nav.html
@@ -8,9 +8,9 @@
         </button>
         <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
             <div class="navbar-nav ml-auto p-4">
-                <a href="index.php" class="nav-item nav-link">Home</a>
-                <a href="about.php" class="nav-item nav-link">About</a>
-                <a href="service.php" class="nav-item nav-link">Service</a>
+                <a href="index.php" class="nav-item nav-link">Inicio</a>
+                <a href="about.php" class="nav-item nav-link">Acerca De</a>
+                <a href="service.php" class="nav-item nav-link">Servicios</a>
                 <a href="menu.php" class="nav-item nav-link">Menu</a>
                 <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Pages</a>
@@ -19,7 +19,7 @@
                         <a href="testimonial.php" class="dropdown-item">Testimonial</a>
                     </div>
                 </div>
-                <a href="contact.php" class="nav-item nav-link">Contact</a>
+                <a href="contact.php" class="nav-item nav-link">Contacto</a>
             </div>
         </div>
     </nav>
