--- a/1-base.html
+++ b/1-base.html
@@ -1,14 +1,14 @@
 <div class="container-fluid footer text-white mt-5 pt-5 px-0 position-relative overlay-top">
     <div class="row mx-0 pt-5 px-sm-3 px-lg-5 mt-4">
         <div class="col-lg-3 col-md-6 mb-5">
-            <h4 class="text-white text-uppercase mb-4" style="letter-spacing: 3px;">Get In Touch</h4>
-            <p><i class="fa fa-map-marker-alt mr-2"></i>123 Street, New York, USA</p>
-            <p><i class="fa fa-phone-alt mr-2"></i>+012 345 67890</p>
-            <p class="m-0"><i class="fa fa-envelope mr-2"></i>Matias.com</p>
+            <h4 class="text-white text-uppercase mb-4" style="letter-spacing: 3px;">Contáctanos</h4>
+            <p><i class="fa fa-map-marker-alt mr-2"></i>Cañada Strongest N°7, Sucre</p>
+            <p><i class="fa fa-phone-alt mr-2"></i>+591 72850441</p>
+            <p class="m-0"><i class="fa fa-envelope mr-2"></i>marysalteñas@gmail.com</p>
         </div>
         <div class="col-lg-3 col-md-6 mb-5">
-            <h4 class="text-white text-uppercase mb-4" style="letter-spacing: 3px;">Follow Us</h4>
-            <p>Amet elitr vero magna sed ipsum sit kasd sea elitr lorem rebum</p>
+            <h4 class="text-white text-uppercase mb-4" style="letter-spacing: 3px;">Siguenos</h4>
+            <p>Disfruta de nuestras auténticas salteñas y mantente al día con nuestras novedades.</p>
             <div class="d-flex justify-content-start">
                 <a class="btn btn-lg btn-outline-light btn-lg-square mr-2" href="#"><i class="fab fa-twitter"></i></a>
                 <a class="btn btn-lg btn-outline-light btn-lg-square mr-2" href="#"><i class="fab fa-facebook-f"></i></a>
@@ -17,22 +17,22 @@
             </div>
         </div>
         <div class="col-lg-3 col-md-6 mb-5">
-            <h4 class="text-white text-uppercase mb-4" style="letter-spacing: 3px;">Open Hours</h4>
+            <h4 class="text-white text-uppercase mb-4" style="letter-spacing: 3px;">Horarios de Atención</h4>
             <div>
-                <h6 class="text-white text-uppercase">Monday - Friday</h6>
-                <p>8.00 AM - 8.00 PM</p>
-                <h6 class="text-white text-uppercase">Saturday - Sunday</h6>
-                <p>2.00 PM - 8.00 PM</p>
+                <h6 class="text-white text-uppercase">Lunes - Sábado</h6>
+                <p>6.00 AM - 1.00 PM</p>
+                <h6 class="text-white text-uppercase">Domingo</h6>
+                <p>Cerrado</p>
             </div>
         </div>
         <div class="col-lg-3 col-md-6 mb-5">
-            <h4 class="text-white text-uppercase mb-4" style="letter-spacing: 3px;">Newsletter</h4>
-            <p>Amet elitr vero magna sed ipsum sit kasd sea elitr lorem rebum</p>
+            <h4 class="text-white text-uppercase mb-4" style="letter-spacing: 3px;">Boletín Informativo</h4>
+            <p>Suscríbete para recibir noticias y promociones sobre nuestras deliciosas salteñas.</p>
             <div class="w-100">
                 <div class="input-group">
-                    <input type="text" class="form-control border-light" style="padding: 25px;" placeholder="Your Email">
+                    <input type="text" class="form-control border-light" style="padding: 25px;" placeholder="Tu Correo Electronico">
                     <div class="input-group-append">
-                        <button class="btn btn-primary font-weight-bold px-3">Sign Up</button>
+                        <button class="btn btn-primary font-weight-bold px-3">Inscribirse</button>
                     </div>
                 </div>
             </div>
