--- a/1-nav.html
+++ b/1-nav.html
@@ -16,7 +16,7 @@
                     <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Pages</a>
                     <div class="dropdown-menu text-capitalize">
                         <a href="reservation.php" class="dropdown-item">Reservation</a>
-                        <a href="testimonial.php" class="dropdown-item">Testimonial</a>
+                        <a href="testimonial.php" class="dropdown-item">Testimonio</a>
                     </div>
                 </div>
                 <a href="contact.php" class="nav-item nav-link">Contacto</a>
