--- a/1-nav.html
+++ b/1-nav.html
@@ -11,7 +11,7 @@
                 <a href="index.php" class="nav-item nav-link">Inicio</a>
                 <a href="about.php" class="nav-item nav-link">Acerca De</a>
                 <a href="service.php" class="nav-item nav-link">Servicios</a>
-                <a href="menu.php" class="nav-item nav-link">Menu</a>
+                <a href="menu.php" class="nav-item nav-link">Menú</a>
                 <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Pages</a>
                     <div class="dropdown-menu text-capitalize">
