--- a/1-nav.html
+++ b/1-nav.html
@@ -13,9 +13,9 @@
                 <a href="service.php" class="nav-item nav-link">Servicios</a>
                 <a href="menu.php" class="nav-item nav-link">Menú</a>
                 <div class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Pages</a>
+                    <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Experiencias</a>
                     <div class="dropdown-menu text-capitalize">
-                        <a href="reservation.php" class="dropdown-item">Reservation</a>
+                        <a href="reservation.php" class="dropdown-item">Pedidos</a>
                         <a href="testimonial.php" class="dropdown-item">Testimonios</a>
                     </div>
                 </div>
