--- a/2-testimonial.html
+++ b/2-testimonial.html
@@ -1,53 +1,49 @@
-<div class="container-fluid pt-5">
+<div class="container-fluid py-5">
     <div class="container">
         <div class="section-title">
-            <h4 class="text-primary text-uppercase" style="letter-spacing: 5px;">Nuestros Servicios</h4>
-            <h1 class="display-4">Frescura y Calidad</h1>
+            <h4 class="text-primary text-uppercase" style="letter-spacing: 5px;">Testimonios</h4>
+            <h1 class="display-4">Nuestros Clientes Dicen</h1>
         </div>
-        <div class="row">
-            <div class="col-lg-6 mb-5">
-                <div class="row align-items-center">
-                    <div class="col-sm-5">
-                        <img class="img-fluid mb-3 mb-sm-0" src="img/service-1.jpg" alt="">
-                    </div>
-                    <div class="col-sm-7">
-                        <h4><i class="fa fa-truck service-icon"></i>Entrega Rapida</h4>
-                        <p class="m-0">En Salteñería Mary, te llevamos lo mejor en cada bocado. ¡Prueba nuestras deliciosas salteñas!</p>
+        <div class="owl-carousel testimonial-carousel"> <!-- Aca esta el error -->
+            <div class="testimonial-item">
+                <div class="d-flex align-items-center mb-3">
+                    <img class="img-fluid" src="img/testimonial-4.jpg" alt="">
+                    <div class="ml-3">
+                        <h4>Pedro López</h4>
+                        <i>Arquitecto</i>
                     </div>
                 </div>
+                <p class="m-0">Me encanta el relleno jugoso y los diferentes sabores que ofrecen. ¡Muy recomendable!</p>
             </div>
-            <div class="col-lg-6 mb-5">
-                <div class="row align-items-center">
-                    <div class="col-sm-5">
-                        <img class="img-fluid mb-3 mb-sm-0" src="img/servicio_2.jpg" alt="">
-                    </div>
-                    <div class="col-sm-7">
-                        <h4><i class="fa fa-award service-icon"></i>Salteñas de Calidad</h4>
-                        <p class="m-0">Elaboradas con ingredientes frescos y auténticos, cada salteña es un festín para tus sentidos.</p>
+            <div class="testimonial-item">
+                <div class="d-flex align-items-center mb-3">
+                    <img class="img-fluid" src="img/testimonial-2.jpg" alt="">
+                    <div class="ml-3">
+                        <h4>Juan Soteldo</h4>
+                        <i>Administrador de Empresas</i>
                     </div>
                 </div>
+                <p class="m-0">Las mejores salteñas que he probado. El sabor es auténtico y la masa es perfecta.</p>
             </div>
-            <div class="col-lg-6 mb-5">
-                <div class="row align-items-center">
-                    <div class="col-sm-5">
-                        <img class="img-fluid mb-3 mb-sm-0" src="img/servicio-3.jpeg" alt="">
-                    </div>
-                    <div class="col-sm-7">
-                        <h4><i class="fa fa-award service-icon"></i>Aventura Unica</h4>
-                        <p class="m-0">Aseguramos una experiencia gastronómica excepcional. ¡Nuestro compromiso es ofrecerte lo mejor en cada bocado!</p>
+            <div class="testimonial-item">
+                <div class="d-flex align-items-center mb-3">
+                    <img class="img-fluid" src="img/testimonial-3.jpg" alt="">
+                    <div class="ml-3">
+                        <h4>María Gonzales</h4>
+                        <i>Abogada</i>
                     </div>
                 </div>
+                <p class="m-0">Siempre que paso por Sucre, la Salteñería Mary es una parada obligatoria. ¡Deliciosas!</p>
             </div>
-            <div class="col-lg-6 mb-5">
-                <div class="row align-items-center">
-                    <div class="col-sm-5">
-                        <img class="img-fluid mb-3 mb-sm-0" src="img/servicio-4.jpg" alt="">
-                    </div>
-                    <div class="col-sm-7">
-                        <h4><i class="fa fa-table service-icon"></i>Haz tu Pedido Ahora</h4>
-                        <p class="m-0">¡Ordénalas ahora y disfruta de la verdadera esencia de la gastronomía boliviana en la comodidad de tu hogar!</p>
+            <div class="testimonial-item">
+                <div class="d-flex align-items-center mb-3">
+                    <img class="img-fluid" src="img/testimonial-1.jpg" alt="">
+                    <div class="ml-3">
+                        <h4>Ana Torres</h4>
+                        <i>Turista</i>
                     </div>
                 </div>
+                <p class="m-0">La atención es excelente y las salteñas son insuperables. ¡Volveré pronto!</p>
             </div>
         </div>
     </div>
